--- a/src/components/CallToAction/CallToAction.css
+++ b/src/components/CallToAction/CallToAction.css
@@ -1,7 +1,7 @@
 .cta-section {
   display: flex;
   width: 100%;
-  height: 349px;
+  padding: 4rem 2rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
   display: flex;
   width: 100%;
   max-width: 1440px;
-  padding: 75px 0;
+  padding: 2rem 0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -68,8 +68,7 @@
 /* Responsividade */
 @media (max-width: 768px) {
   .cta-section {
-    height: auto;
-    padding: 60px 20px;
+    padding: 3rem 1.5rem;
   }
 
   .cta-container {
