--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,28 +3,22 @@
   background-color: #fff;
   position: relative;
   overflow: hidden;
-  flex-shrink: 0;
-  margin-top: -120px;
-  padding-top: 120px;
-  padding-bottom: 0;
+  padding: 0;
 }
 
 .footer-top {
   display: flex;
   width: 1158px;
   max-width: 90%;
-  height: 540px;
   padding: 65px;
   justify-content: space-between;
   align-items: center;
-  flex-shrink: 0;
   background-color: #fff;
   border-radius: 11px;
   box-shadow: 0px 44px 93px 0px rgba(0, 0, 0, 0.12);
-  margin: -60px auto 1.5rem;
-  overflow: hidden;
+  margin: -60px auto 0;
   position: relative;
-  z-index: 10;
+  z-index: 2;
 }
 
 .footer-content {
@@ -33,6 +27,7 @@
   justify-content: space-between;
   gap: 4rem;
   flex-wrap: wrap;
+  padding-top: 4rem;
 }
 
 .footer-left {
@@ -199,29 +194,20 @@
 /* Footer Bottom */
 .footer-bottom {
   width: 100%;
-  height: 160px;
-  flex-shrink: 0;
   background-color: #000;
-  position: relative;
-  margin: 0;
-  border-radius: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
+  padding: 8rem 0 2rem;
+  margin-top: -4rem;
 }
 
 .footer-container {
   display: flex;
   width: 100%;
-  max-width: 100%;
   height: 89px;
   justify-content: space-between;
   align-items: center;
   background-color: #1a93c4;
-  border-radius: 0px;
-  padding: 0 200px;
-  margin: 0 auto;
+  padding: 0 60px;
+  margin-top: 2rem;
 }
 
 .footer-logo {
@@ -277,39 +263,25 @@
 /* Responsividade */
 @media (max-width: 1440px) {
   .footer-container {
-    max-width: 90%;
     padding: 0 40px;
   }
 
   .footer-top {
     max-width: 90%;
-    height: auto;
     padding: 50px;
     margin-top: -60px;
-  }
-
-  .footer {
-    margin-top: -100px;
-    padding-top: 100px;
   }
 }
 
 @media (max-width: 992px) {
-  .footer {
-    padding: 90px 1rem 2rem;
-    margin-top: -90px;
-  }
-
   .footer-top {
     padding: 40px;
     flex-direction: column;
-    height: auto;
     margin-top: -40px;
   }
 
-  .footer-content {
-    flex-direction: column;
-    gap: 3rem;
+  .footer-bottom {
+    padding: 6rem 0 2rem;
   }
 
   .footer-container {
@@ -319,39 +291,21 @@
     text-align: center;
     padding: 30px 20px;
   }
-
-  .footer-bottom {
-    height: auto;
-    padding: 30px 20px;
-  }
-
-  .footer-nav ul {
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1.5rem;
-  }
 }
 
 @media (max-width: 768px) {
-  .footer {
-    padding: 80px 0.5rem 1.5rem;
-    margin-top: -80px;
-  }
-
   .footer-top {
     padding: 30px 20px;
-    margin-bottom: 1rem;
-    margin-top: -20px;
+    margin-top: -30px;
   }
 
-  .footer-nav ul {
-    gap: 1rem;
+  .footer-bottom {
+    padding: 4rem 0 1.5rem;
   }
 
   .footer-container {
     gap: 20px;
     padding: 20px;
-    width: 95%;
   }
 
   .footer-left h2,
