--- a/src/components/Workflow/Workflow.css
+++ b/src/components/Workflow/Workflow.css
@@ -44,7 +44,7 @@
 }
 
 .workflow-description h2 {
-  color: #132238;
+  color: #325a73;
   font-family: "Work Sans", sans-serif;
   font-size: 36px;
   font-style: normal;
