--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -145,7 +145,8 @@
 }
 
 .form-group input,
-.form-group textarea {
+.form-group textarea,
+.form-group select {
   font-family: "Work Sans", sans-serif;
   padding: 0.8rem 1rem;
   border: 1px solid #eaeaea;
@@ -155,11 +156,34 @@
   outline: none;
   transition: border-color 0.3s ease;
   width: 100%;
+  background-color: #fff;
+}
+
+.form-group select {
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%234a5568' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1em;
+  padding-right: 2.5rem;
 }
 
 .form-group input:focus,
-.form-group textarea:focus {
+.form-group textarea:focus,
+.form-group select:focus {
   border-color: #325a73;
+}
+
+.form-group select:hover {
+  border-color: #325a73;
+}
+
+.form-group select option {
+  padding: 0.8rem;
+  font-size: 0.95rem;
 }
 
 .form-group textarea {
