--- a/src/components/ThemeToggle/ThemeToggle.css
+++ b/src/components/ThemeToggle/ThemeToggle.css
@@ -12,7 +12,7 @@
   font-family: "Work Sans", sans-serif;
   font-size: 14px;
   border-radius: 9999px;
-  margin-left: 8px;
+  margin-left: 36px;
 }
 
 .theme-toggle-btn:hover {
@@ -23,4 +23,12 @@
 
 .theme-toggle-btn span {
   font-weight: 500;
+}
+
+/* Estilo específico para dispositivos móveis */
+@media (max-width: 992px) {
+  .theme-toggle-btn {
+    margin-left: 0;
+    margin-top: 12px;
+  }
 }
